--- a/ness_angular/assets/css/main.css
+++ b/ness_angular/assets/css/main.css
@@ -1,1 +1,41 @@
 /* main.css */
+
+a:focus {
+	outline: none;
+}
+
+@media (min-width: 768px) {
+
+	html,
+	body,
+	.container-fluid,
+	.container-fluid > .row {
+		height: 100%;
+	}
+
+	.left-panel {
+		height: 100%;
+		overflow-y: scroll;
+	}
+
+	.right-panel {
+		height: 100%;
+	}
+
+	.layout-mock {
+		height: 100%;
+	}
+
+	.layout-mock  .top-panel {
+
+	}
+
+	.layout-mock  .bottom-panel {
+
+	}
+
+	.layout-mock  .ui-splitbar {
+		background-color: #337AB7;
+	}
+
+}
