created function for calculate time at work

--- a/ness_angular/assets/css/main.css
+++ b/ness_angular/assets/css/main.css
@@ -9,6 +9,18 @@ a:focus {
 	padding: 20px;
 }
 
+.good {
+	color: green;
+}
+
+.bad {
+	color: red;
+}
+
+.missing {
+	color: orange;
+}
+
 @media (max-width: 767px) {
 
 	.stretch {
