--- a/ness_angular/assets/css/main.css
+++ b/ness_angular/assets/css/main.css
@@ -21,6 +21,10 @@ a:focus {
 	color: orange;
 }
 
+[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
+  display: none !important;
+}
+
 @media (max-width: 767px) {
 
 	.stretch {
